[package]
name = "ripb"
version = "0.3.1"
authors = ["Thibaut Lorrain <fredszaq@gmail.com>"]
edition = "2018"
description = "A rust crate providing an implementation of a lock-free type-safe in-process bus."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/snipsco/ripb"
readme = "README.md"

[dependencies]
crossbeam-channel = "0.3"
log = "0.4"
num_cpus = "1.8"

[dev-dependencies]
bencher = "0.1"


[[bench]]
name = "bench"
harness = false
